@startuml
title ERD — Livraison, NCE & Sondage
!theme plain

entity "USER" as user {
    * id : UUID <<PK>>
    --
    email : VARCHAR
    role : ENUM("Admin","Quality","Producer")
    created_at : TIMESTAMP
}

entity "PROJECT" as project {
    * id : UUID <<PK>>
    --
    name : VARCHAR
    owner_id : UUID <<FK>>
}

entity "DELIVERY" as delivery {
    * id : UUID <<PK>>
    --
    project_id : UUID <<FK>>
    issuer_id : UUID <<FK>>
    title : VARCHAR
    description : TEXT
    status : ENUM("DRAFT","PUBLISHED")
    created_at : TIMESTAMP
    published_at : TIMESTAMP
}

entity "FILE" as file {
    * id : UUID <<PK>>
    --
    delivery_id : UUID <<FK>>
    nce_id : UUID <<FK, NULLABLE>>
    storage_key : VARCHAR
    filename : VARCHAR
    created_at : TIMESTAMP
}

entity "RECEIPT" as receipt {
    * id : UUID <<PK>>
    --
    delivery_id : UUID <<FK>>
    file_id : UUID <<FK>>
    generated_by : UUID <<FK>>
    generated_at : TIMESTAMP
}

entity "NOTIFICATION" as notification {
    * id : UUID <<PK>>
    --
    delivery_id : UUID <<FK>>
    to_email : VARCHAR
    channel : ENUM("EMAIL")
    status : ENUM("PENDING","SENT","FAILED")
    sent_at : TIMESTAMP
}

entity "SURVEY" as survey {
    * id : UUID <<PK>>
    --
    delivery_id : UUID <<FK, NULLABLE>>
    type : ENUM("NPS","CSAT")
    score : SMALLINT
    comment : TEXT
    respondent_email : VARCHAR
    responded_at : TIMESTAMP
}

entity "NCE" as nce {
    * id : UUID <<PK>>
    --
    delivery_id : UUID <<FK>>
    title : VARCHAR
    description : TEXT
    category : ENUM("precision","coherence","oubli")
    severity : ENUM("minor","major","critical")
    status : ENUM("OPEN","IN_PROGRESS","CLOSED")
    assigned_to : UUID <<FK, NULLABLE>>
    created_at : TIMESTAMP
}

entity "AUDIT_LOG" as audit_log {
    * id : UUID <<PK>>
    --
    user_id : UUID <<FK>>
    action_type : VARCHAR
    entity_type : VARCHAR
    entity_id : UUID
    timestamp : TIMESTAMP
}

entity "GUEST" as guest {
    * id : UUID <<PK>>
    --
    email : VARCHAR <<UNIQUE>>
    name : VARCHAR
    created_at : TIMESTAMP
}

' ============================================================
' Relations
' ============================================================

user ||--o{ project : owns
user ||--o{ delivery : issues
user ||--o{ audit_log : logs
user ||--o{ receipt : generates
user ||--o{ nce : assigned_to

project ||--o{ delivery : contains

delivery ||--o{ file : has
delivery ||--|| receipt : generates
delivery ||--o{ notification : sends
delivery ||--o{ survey : collects
delivery ||--o{ nce : collects

nce ||--o{ file : attachments

guest ||--o{ notification : receives

@enduml
